--- a/index.html
+++ b/index.html
@@ -27,5 +27,95 @@
             <img class="img" src="./illustration-mockups (2).svg" alt="illustration-mockups">
         </div>
     </header>
+    <main>
+        <div class="first-left">
+            <h3>Grow Together</h3>
+            <div class="second-left">
+                <p>
+                    Generate meaningful discussions with your audience and build a strong, <br>
+                    loyal, community. Think of the insightful conversations you miss out <br>
+                    with on a feedback form.
+                </p>
+            </div>
+        <div class="first-right">
+            <img style="height:12% ; width: 12%;" src="./illustration-grow-together.svg" alt="Growing Together">
+         </div>
+
+            </div>
+
+        </div>
+        <div class="firsts-left">
+            <img style="height: 30%; width: 30%;" src="./illustration-flowing-conversation.svg" alt="Flowing conversations">
+        <div class="firsts-right">
+            <h3>
+                Flowing conversations
+            </h3>
+        <div class="seconds-right">
+            <p>
+                You wouldn't paginate a discussion in real life, so why do you do <br>
+                it online?. Our threads have just in-time loading for a more <br>
+                natural flow.
+            </p>
+
+        </div>
+        </div>
+        </div>
+        <div class="first-onleft">
+            <h3>Your Users</h3>
+        <div class="second-onleft">
+            <p>
+                It takes no time at all to integrate Huddle with your app's authentication <br>
+                solution. This means , once signed in to your app, your users  can start <br>
+                chatting immediately.
+            </p>
+        <div class="first-onright">
+            <img style="height:50% ; width:50% ;" src="./illustration-your-users (1).svg" alt="Users">
+        </div>
+        </div>
+        </div>
+    </main>
+    <div class="container">
+        <h3>Ready to build your Community?</h3>
+        <input class="btn1" type="button" value="Get started for free">
+
+    </div>
+    <footer>
+        <div>
+        <img style="color:white ;" class="logo" src="./logo.svg" alt="Huddle">
+        </div>
+        <div>
+        <img src="./icon-location.svg" alt="icon-location">
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi non doloribus,
+            accusamus soluta architecto nemo, voluptatum eligendi maxime aspernatur 
+            deleniti voluptas et harum inventore repellendus delectus alias dignissimos
+            perferendis labore.
+        </p>
+        <img src="./icon-phone.svg" alt="icon-phone">
+        <p>
+            +1-543-123-4567
+        </p>
+        <img src="./icon-email.svg" alt="icon-email">
+        <p>
+            example@huddle.com
+        </p>
+        </div>
+        </div>
+        </div>
+        <div>
+            About US
+            What we do
+            FAQ
+            career
+            Blog
+            Contact US
+        </div>
+        <div>
+            Facebook
+            Twitter
+            Instagram
+        </div>
+        <div>copyright 2008 Huddle. All Nigeria reserved.</div>
+    </footer>
 </body>
 </html>
