--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <div class="first-left">
-            <h3>Grow Together</h3>
+            <h3 style="margin-left: 20px;">Grow Together</h3>
             <div class="second-left">
                 <p>
                     Generate meaningful discussions with your audience and build a strong, <br>
@@ -61,7 +61,7 @@
         </div>
         </div>
         <div class="first-onleft">
-            <h3>Your Users</h3>
+            <h3 style="padding-left:20px; ">Your Users</h3>
         <div class="second-onleft">
             <p>
                 It takes no time at all to integrate Huddle with your app's authentication <br>
@@ -83,39 +83,48 @@
         <div>
         <img style="color:white ;" class="logo" src="./logo.svg" alt="Huddle">
         </div>
-        <div>
+        <div class="location">
         <img src="./icon-location.svg" alt="icon-location">
+        <div>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi non doloribus,
-            accusamus soluta architecto nemo, voluptatum eligendi maxime aspernatur 
-            deleniti voluptas et harum inventore repellendus delectus alias dignissimos
-            perferendis labore.
+            Lorem ipsum dolor, sit amet consectetur <br>
+            adipisicing elit. Animi non doloribus, <br>
+            accusamus soluta architecto nemo.
         </p>
-        <img src="./icon-phone.svg" alt="icon-phone">
+        </div>
+        </div>
+        <div class="phone">
+        <img  src="./icon-phone.svg" alt="icon-phone">
+        <div>
         <p>
             +1-543-123-4567
         </p>
+        </div>
+        </div>
+        <div class="mail">
         <img src="./icon-email.svg" alt="icon-email">
+        <div>
         <p>
             example@huddle.com
         </p>
         </div>
         </div>
+        <div class="about">
+           <nav>About Us</nav>
+           <nav>What we do</nav> 
+           <nav>FAQ</nav>
         </div>
-        <div>
-            About US
-            What we do
-            FAQ
-            career
-            Blog
-            Contact US
+            <div class="about">
+           <nav>Career</nav> 
+           <nav>Blog</nav>
+           <nav>Contact Us</nav> 
         </div>
-        <div>
+        <div class="social">
             Facebook
             Twitter
             Instagram
-        </div>
         <div>copyright 2008 Huddle. All Nigeria reserved.</div>
+        </div>
     </footer>
 </body>
 </html>
