--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </div>
     </header>
     <main>
-        <div class="first-left">
+        <div class="grow-together">
+            <div class="grow-together1">
             <h3 style="margin-left: 20px;">Grow Together</h3>
             <div class="second-left">
                 <p>
@@ -37,7 +38,7 @@
                     with on a feedback form.
                 </p>
             </div>
-        <div class="first-right">
+        <div class="grow-together2">
             <img style="height:12% ; width: 12%;" src="./illustration-grow-together.svg" alt="Growing Together">
          </div>
 
