--- a/index.html
+++ b/index.html
@@ -81,50 +81,70 @@
 
     </div>
     <footer>
-        <div>
-        <img style="color:white ;" class="logo" src="./logo.svg" alt="Huddle">
-        </div>
-        <div class="location">
-        <img src="./icon-location.svg" alt="icon-location">
-        <div>
+      <div class="footer1">
+        <label for=""></label>
+        <img src="" alt="">
         <p>
-            Lorem ipsum dolor, sit amet consectetur <br>
-            adipisicing elit. Animi non doloribus, <br>
-            accusamus soluta architecto nemo.
+            <a href="#">
+                <img src="./icon-location.svg" alt="location">
+                Lagos,
+                Nigeria.
+            </a>
         </p>
-        </div>
-        </div>
-        <div class="phone">
-        <img  src="./icon-phone.svg" alt="icon-phone">
-        <div>
         <p>
-            +1-543-123-4567
+            <a href="#">
+                <img src="./icon-phone.svg" alt="Phone">
+                +2348034184997
+            </a>
         </p>
-        </div>
-        </div>
-        <div class="mail">
-        <img src="./icon-email.svg" alt="icon-email">
-        <div>
         <p>
-            example@huddle.com
+            <a href="#">
+                <img src="./icon-email.svg" alt="email">
+                example@huddle.com
+            </a>
         </p>
+        <div class="footer2">
+            <ul>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+                <li>
+                    <a href="#">What we do</a>
+                </li>
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+            </ul>
         </div>
+        <div class="footer3">
+            <ul>
+                <li>
+                    <a href="#">Career</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    Contact Us
+                </li>
+            </ul>
         </div>
-        <div class="about">
-           <nav>About Us</nav>
-           <nav>What we do</nav> 
-           <nav>FAQ</nav>
-        </div>
-            <div class="about">
-           <nav>Career</nav> 
-           <nav>Blog</nav>
-           <nav>Contact Us</nav> 
-        </div>
-        <div class="social">
-            Facebook
-            Twitter
-            Instagram
-        <div>copyright 2008 Huddle. All Nigeria reserved.</div>
+      </div>
+        <div class="footer4">
+            <ul>
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+                <li>
+                    <a href="#">Instagram</a>
+                </li>
+                <li>
+                    <a href="#">Facebook</a>
+                </li>
+            </ul>
+            <p>
+                &copy; 2022 Huddle. All rights reserved.
+            </p>
         </div>
     </footer>
 </body>
