--- a/index.html
+++ b/index.html
@@ -1,151 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Huddle Landing Page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <header>
-        <div class="top-left">
-        <img class="logo" src="./logo.svg" alt="logo">
-        <div class="first-text">
-        <h3>Build The Community Your Fans Will Love</h3>
-        <p>
-            Huddle re-imagines the way we build communities.
-            You have <br> a voice, but so does your audience.
-            Create connections with <br> your users as you engage
-            in genuine discussions.
-        </p>
-        <input class="btn1" type="button" value="Get started for free">
+      <div class="top-header">
+        <label> <img src="./logo.svg" alt="Logo" /></label>
+        <button>Try It Free</button>
+      </div>
+      <div class="buttom-header">
+        <div class="text">
+          <h1>
+            Build The Community<br />
+            Your Fans Will Love
+          </h1>
+          <p>
+            Huddle re-imagines the way we bild communities. You have a voice,
+            but so does your audience. Create connetions with your users as you
+            engage in genuine discussion.
+          </p>
+          <button>Get Started For Free</button>
         </div>
-        </div>
-        <div class="top-right">
-            <input class="btn2" type="button" value="Try it free">
-            <img class="img" src="./illustration-mockups (2).svg" alt="illustration-mockups">
-        </div>
-    </header>
-    <main>
-        <div class="grow-together">
-            <div class="grow-together1">
-            <h3 style="margin-left: 20px;">Grow Together</h3>
-            <div class="second-left">
-                <p>
-                    Generate meaningful discussions with your audience and build a strong, <br>
-                    loyal, community. Think of the insightful conversations you miss out <br>
-                    with on a feedback form.
-                </p>
-            </div>
-        <div class="grow-together2">
-            <img style="height:12% ; width: 12%;" src="./illustration-grow-together.svg" alt="Growing Together">
-         </div>
-
-            </div>
-
-        </div>
-        <div class="firsts-left">
-            <img style="height: 30%; width: 30%;" src="./illustration-flowing-conversation.svg" alt="Flowing conversations">
-        <div class="firsts-right">
-            <h3>
-                Flowing conversations
-            </h3>
-        <div class="seconds-right">
-            <p>
-                You wouldn't paginate a discussion in real life, so why do you do <br>
-                it online?. Our threads have just in-time loading for a more <br>
-                natural flow.
-            </p>
-
-        </div>
-        </div>
-        </div>
-        <div class="first-onleft">
-            <h3 style="padding-left:20px; ">Your Users</h3>
-        <div class="second-onleft">
-            <p>
-                It takes no time at all to integrate Huddle with your app's authentication <br>
-                solution. This means , once signed in to your app, your users  can start <br>
-                chatting immediately.
-            </p>
-        <div class="first-onright">
-            <img style="height:50% ; width:50% ;" src="./illustration-your-users (1).svg" alt="Users">
-        </div>
-        </div>
-        </div>
-    </main>
-    <div class="container">
-        <h3>Ready to build your Community?</h3>
-        <input class="btn1" type="button" value="Get started for free">
-
-    </div>
-    <footer>
-      <div class="footer1">
-        <label for=""></label>
-        <img src="" alt="">
-        <p>
-            <a href="#">
-                <img src="./icon-location.svg" alt="location">
-                Lagos,
-                Nigeria.
-            </a>
-        </p>
-        <p>
-            <a href="#">
-                <img src="./icon-phone.svg" alt="Phone">
-                +2348034184997
-            </a>
-        </p>
-        <p>
-            <a href="#">
-                <img src="./icon-email.svg" alt="email">
-                example@huddle.com
-            </a>
-        </p>
-        <div class="footer2">
-            <ul>
-                <li>
-                    <a href="#">About Us</a>
-                </li>
-                <li>
-                    <a href="#">What we do</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer3">
-            <ul>
-                <li>
-                    <a href="#">Career</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    Contact Us
-                </li>
-            </ul>
+        <div class="mockups">
+          <img src="./illustration-mockups (2).svg" alt="Illustration-Mockups" />
         </div>
       </div>
-        <div class="footer4">
-            <ul>
-                <li>
-                    <a href="#">Twitter</a>
-                </li>
-                <li>
-                    <a href="#">Instagram</a>
-                </li>
-                <li>
-                    <a href="#">Facebook</a>
-                </li>
-            </ul>
+    </header>
+    <main>
+      <section>
+        <div class="grow-together">
+          <div class="grow-together1">
+            <h1>Grow Together</h1>
             <p>
-                &copy; 2022 Huddle. All rights reserved.
+              Generate meaningful discussions with your <br> audience and build a
+              strong, loyal community. Think of the insightful conversations you
+              miss out on with a feedback.
             </p>
+          </div>
+          <div class="grow-together2">
+            <i>
+              <img
+                src="./illustration-grow-together.svg"
+                alt="Grow Together"
+              />
+            </i>
+          </div>
         </div>
+        <div class="flowing">
+          <div class="flowing1">
+            <img
+              src="./illustration-flowing-conversation.svg"
+              alt="Flowing Conversations"
+            />
+          </div>
+          <div class="flowing2">
+            <h1>Flowing Conversations</h1>
+            <p>
+              You wouldn't paginate a conversation in real life, so why do it
+              online? Our threads have just-in-time loading for a more natural
+              flow.
+            </p>
+          </div>
+        </div>
+
+        <div class="users">
+          <div class="users1">
+            <h1>Your Users</h1>
+            <p>
+              It takes no time at all to integrate Huddle with your app's
+              authentication solution. This means, once signed in to your app,
+              your users an start chatting immediately.
+            </p>
+          </div>
+
+          <div class="users2">
+            <img src="./illustration-your-users (1).svg" alt="Your Users" />
+          </div>
+        </div>
+      </section>
+
+      <div class="get-started">
+        <h2>Ready To Build Your Community</h2>
+        <button>Get Started For Free</button>
+      </div>
+    </main>
+    <footer>
+      <div class="footer1">
+        <label>
+          <img class="footer-logo" src="./logo.svg" alt="Logo"
+        /></label>
+        <p>
+          <a href="#">
+            <img src="./icon-location.svg" alt="location" /> Lagos,
+            Nigeria.
+          </a>
+        </p>
+        <p>
+          <a href="#">
+            <img src="./icon-phone.svg" alt="phone" /> +2349090419419
+          </a>
+        </p>
+        <p>
+          <a href="#">
+            <img src="./icon-email.svg" alt="phone" /> example@huddle.com
+          </a>
+        </p>
+      </div>
+      <div class="footer2">
+        <ul>
+          <li>
+            <a href="#">About Us</a>
+          </li>
+          <li>
+            <a href="https://www.google.com">What We Do</a>
+          </li>
+          <li>
+            <a href="#">FAQ</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer3">
+        <ul>
+          <li><a href="#">Career</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="footer4">
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com/"
+              ><i class="fab fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </li>
+        </ul>
+        <p>&copy; 2022 Huddle. All rights reserved.</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
